--- a/first_project/styles.css
+++ b/first_project/styles.css
@@ -111,3 +111,71 @@
         display: none;
     }
   }
+
+
+  .sectionSecond{
+    width: 80%;
+    margin: auto;
+    margin-top: 80px;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 20px;
+    height: 150px;
+    /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    align-items: center;
+    padding-bottom: 20px;
+    margin-bottom: 500px;
+  }
+  .sectionSecond>div>img{
+    height: 60px;
+    width: 60px;
+    margin-top: 13px;
+  }
+  .sectionSecond>div>div>h3{
+    margin-bottom: 4px;
+    font-weight:800;
+    opacity: 0.8;
+  }
+  .sectionSecond>div>div>p{
+   text-align: justify;
+   width: 90%;
+   line-height: 1.4;
+   font-weight: lighter;
+   color: rgb(32, 31, 31);
+  }
+  .sectionSecond>div{
+    display: flex;
+    gap: 13px;
+   
+  }
+  .sectionSecond>div:hover{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    height: 100px;
+    padding-top: 10px;
+    cursor: pointer;
+  }
+
+  @media (max-width: 480px){
+    .sectionSecond{
+        display: flex;
+       flex-direction: column;
+       height: max-content;
+       gap: 30px;
+       margin-top: 30px;
+       box-shadow: none;
+    }
+    .sectionSecond>div{
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        height: 100px;
+    padding-top: 10px;
+    }
+    .sectionSecond>div:hover{
+        cursor:auto;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        /* height: 100px; */
+        height: 100px;
+        padding-top: 10px;
+       
+    }
+  }
